syntax = "proto3";

package api.v1.activity;

import "google/protobuf/timestamp.proto";
import "api/v1/activity/activity.proto";
import "model/common.proto";

service Service {
  // Get Activities
  rpc GetActivities(GetActivitiesRequest) returns (GetActivitiesResponse) {}
}

message GetActivitiesRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
  model.Pagination pagination = 3;
}

message GetActivitiesResponse {
  repeated Activity activities = 1;
}
