syntax = "proto3";

package api.v1.role;

import "google/protobuf/timestamp.proto";
import "model/metadata.proto";


message Role {  
    string role_id = 1;
    repeated Permission permissions = 2;
    map<string, bytes> metadata = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message EntityID {
  oneof kind {
    string user_id = 1;
    string service_account_id = 2;
    string group_id = 3;
  }
}

message Permission {
    string action = 1;
    Scope scope = 2;
}

message Scope {
    string resource = 1;
    string environment = 2;
    string project = 3;
}

message Update {
  message Permissions {
    repeated Permission permissions = 1;
  }

  oneof update { 
    Permission add_permission = 1;
    Permissions remove_permission = 2;
    model.Metadata set_metadata = 3;
    string delete_metadata_key = 4;
  }
}